--- a/views/persona/addpersona.html
+++ b/views/persona/addpersona.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FrontEnd</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    
   </head>
   <body>
     <nav class="navbar bg-primary">
@@ -16,9 +17,10 @@
           </div>
         </div>
     </nav>
+    
     <div class="container">
  
-          <form action="/agregarPersonaMy" method="POST">
+          <div  id = "formulario" name = "formulario">
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre</label>
               <input  class="form-control" id="nombre" name = "nombre">
@@ -31,13 +33,32 @@
                 <label for="direccion" class="form-label">Direccion</label>
                 <input  class="form-control" id="direccion" name = "direccion">
               </div>
-            <button class="btn btn-primary">Buscar</button>
-          </form>  
+            <button class="btn btn-primary" onclick="enviar()" id = "enviar">Buscar</button>
+            </div>  
          
             
     </div>
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <!-- <script src="script.js"></script> -->
+    <script>
+           
+      const enviar = (e) =>{
+        data = {
+          nombre : document.getElementById('nombre').value,
+          apellido : document.getElementById('apellido').value,
+          direccion : document.getElementById('direccion').value,
+        }
+        config = {
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(data),
+          method: 'POST'
+        }
+        fetch("/agregarPersonaMy",config)
+        console.log('Previniendo envio')
+      }
+    </script>
     </body>
 </html>
