--- a/views/persona/addpersona.html
+++ b/views/persona/addpersona.html
@@ -20,45 +20,27 @@
     
     <div class="container">
  
-          <div  id = "formulario" name = "formulario">
-            <div class="mb-3">
-              <label for="nombre" class="form-label">Nombre</label>
-              <input  class="form-control" id="nombre" name = "nombre">
-            </div>
-            <div class="mb-3">
-                <label for="apellido" class="form-label">Apellido</label>
-                <input  class="form-control" id="apellido" name = "apellido">
+          <form  action = "agregarPersonaMy" method = "POST">
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input  class="form-control" id="nombre" name = "nombre">
               </div>
               <div class="mb-3">
-                <label for="direccion" class="form-label">Direccion</label>
-                <input  class="form-control" id="direccion" name = "direccion">
-              </div>
-            <button class="btn btn-primary" onclick="enviar()" id = "enviar">Buscar</button>
-            </div>  
+                  <label for="apellido" class="form-label">Apellido</label>
+                  <input  class="form-control" id="apellido" name = "apellido">
+                </div>
+                <div class="mb-3">
+                  <label for="direccion" class="form-label">Direccion</label>
+                  <input  class="form-control" id="direccion" name = "direccion">
+                </div>
+              <button class="btn btn-primary"  id = "enviar">Enviar</button>
+          </form>  
          
             
     </div>
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <!-- <script src="script.js"></script> -->
-    <script>
-           
-      const enviar = (e) =>{
-        data = {
-          nombre : document.getElementById('nombre').value,
-          apellido : document.getElementById('apellido').value,
-          direccion : document.getElementById('direccion').value,
-        }
-        config = {
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(data),
-          method: 'POST'
-        }
-        fetch("/agregarPersonaMy",config)
-        console.log('Previniendo envio')
-      }
-    </script>
+
     </body>
 </html>
