--- a/views/app/error.html
+++ b/views/app/error.html
@@ -10,8 +10,8 @@
   <div class="container">
     <h1>Bootstrap Error View</h1>
     <div class="alert alert-danger">
-      <strong>Error!</strong> ${error.message}
-      <button type="button" class="btn btn-primary" data-bs-dismiss="alert">Try Again</button>
+      <strong>Error!</strong> ${respuesta.message}
+      <a href="login" type="button" class="btn btn-primary" data-bs-dismiss="alert">Try Again</a>
     </div>
   </div>
 </body>
