--- a/views/persona/addpersona.html
+++ b/views/persona/addpersona.html
@@ -21,6 +21,7 @@
     <div class="container">
  
           <form  action = "agregarPersonaMy" method = "POST">
+            <input id = "token" name = "token" value = "09un0ew9u0weufy8o7hfo9w8eyrg87emuqe90umu8gyewrgy9e8ryg" hidden>
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input  class="form-control" id="nombre" name = "nombre">
