--- a/views/app/dashboard.html
+++ b/views/app/dashboard.html
@@ -6,6 +6,32 @@
   <title>Bootstrap 5 Dashboard</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script>
+    window.onload = () =>{
+        const token = '${token}'
+        sessionStorage.setItem("token",token) 
+        const userData = '${userData}'
+        sessionStorage.setItem("userData",userData) 
+        const username = JSON.parse(userData)
+        console.log(username.username)
+        const username_show = document.getElementById('username_show').innerHTML = username.username
+    }
+    const allUsers = () => {
+      console.log('entrando!')
+        myInit = {
+            body : JSON.stringify(sessionStorage),
+            method:'POST',
+            headers:{
+                'Content-Type': 'application/json'
+            }
+        }
+        url = '../persona/allusers'
+        fetch(url,myInit)
+        .then(response => response.text())
+        .then(data => console.log(data));
+    }
+    
+  </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
@@ -26,8 +52,8 @@
                 <a class="nav-link" href="#">Pricing</a>
               </li>
             </ul>
-            <span class="navbar-text">
-              ${userData.username}
+            <span class="navbar-text" id = "username_show">
+             
             </span>
           </div>
         </div>
@@ -41,7 +67,7 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick = 'allusers()'>Users</a>
+              <a class="nav-link" onclick="allUsers()">Users</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Posts</a>
@@ -59,28 +85,6 @@
   </div>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script>
-    window.onload = () =>{
-        token = '${token}'
-        sessionStorage.setItem("token",token) 
-        userData = '${userData}'
-        sessionStorage.setItem("userData",userData) 
-
-    }
-    allUsers = () => {
-        myInit = {
-            body : JSON.stringify(sessionStorage),
-            method:'POST',
-            headers:{
-                'Content-Type': 'application/json'
-            }
-        }
-        url = '../persona/allusers'
-        fetch(url,myInit)
-        .then(response => response.text())
-        .then(data => console.log(data));
-        }
-    
-  </script>
+  
 </body>
 </html>
