--- a/views/app/users.html
+++ b/views/app/users.html
@@ -20,9 +20,10 @@
               <tr>
                 ${data.users.map(fila => `
                   <tr>
-                    <td scope="row">${fila.id}</td>
-                    <td>${fila.username}</td>
-                    <td><button type="button" class="btn btn-outline-danger" onclick = "deleteUser(${fila.id})">Borrar</button></td>
+                    <td scope="row" id="user_id_${fila.id}">${fila.id}</td>
+                    <td id = "user_username_${fila.id}">${fila.username}</td>
+                    <td><button type="button" class="btn btn-outline-danger" onclick = "deleteUser(${fila.id})">Borrar</button>
+                    <button type="button" class="btn btn-outline-warning" onclick = "editUser(${fila.id})">Editar</button></td>
                   </tr>
                 `).join('')}
             </tbody>
