--- a/views/login.html
+++ b/views/login.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Login Form</title>
+  <title>Formulario de Registro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
-        <h1 class="text-center">Login</h1>
-        <form action = "dologin" method="POST">
+        <h1 class="text-center">Registro</h1>
+        <form action = "login" method="POST">
           <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+            <label for="email">Correo</label>
+            <input type="text" class="form-control" id="email" name="email" placeholder="Ingrese correo">
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
+            <label for="pass">Password</label>
+            <input type="pass" class="form-control" id="pass" name="pass" placeholder="Ingrese su clave">
           </div>
           <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Login">
